app/radicale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 2
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels: {}
              topologyKey: kubernetes.io/hostname
      containers:
        - name: radicale
          image: ghcr.io/teapotovh/radicale:v0.0.19
          ports:
            - name: http
              containerPort: 5232
          volumeMounts:
            - name: config
              mountPath: /etc/radicale
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: template
          configMap:
            name: config
        - name: config
          emptyDir: {}
