app/radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: radicale-tls
      hosts:
        - calendar.teapot.ovh
  rules:
    - host: calendar.teapot.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  name: http
